[taotao-cloud-project-1723] update[ gradle build ]